# Ai-Test-Engineer

./: .env.example  .gitignore  API_DOCUMENTATION.md  Ai-test.md  NOTES.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
alembic/versions/: 001_initial_schema.py
app/: main.py
app/ai/: document_analyzer.py  llm_client.py  script_generator.py
app/ai/prompts/: script_prompts.py  testcase_prompts.py
app/api/: deps.py
app/api/v1/: documents.py  projects.py  router.py  scripts.py
app/core/: exceptions.py  file_handler.py  security.py
app/db/repositories/: testcase_repo.py
app/models/: project.py
app/schemas/: document.py  project.py
app/services/: document_service.py  project_service.py  testcase_service.py
app/workers/: tasks.py
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/context/: AuthContext.jsx
client/src/hooks/: useApi.js  useAuth.js  useProjects.js
client/src/pages/: DashboardPage.jsx  DocumentsPage.jsx  LoginPage.jsx  ProjectDetailPage.jsx  ProjectsPage.jsx  RegisterPage.jsx  TestCasesPage.jsx
client/src/utils/: api.js  formatters.js  storage.js
server/: Dockerfile  alembic.ini  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 002_add_users_table.py
server/app/: config.py
server/app/ai/: testcase_generator.py
server/app/api/: deps.py
server/app/core/: security.py
server/app/db/: session.py
server/app/models/: base.py  document.py  project.py  script.py  testcase.py  (+1 more)
server/tests/: conftest.py
(+23 files in other folders)
