[project]
name = "ai-test-engineer"
version = "1.0.0"
description = "AI-powered test case generation and automation script generator"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
